--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "chart.js": "^3.7.1",
     "react": "^18.0.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
